include/dss_capi.h

    /*
    Array of strings containing names of all Fuses in the circuit
    */
    DSS_CAPI_DLL void Fuses_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as Fuses_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Fuses_Get_AllNames_GR(void);
    /*
    Number of Fuse elements in the circuit
    */
    DSS_CAPI_DLL int32_t Fuses_Get_Count(void);
    /*
    Set the first Fuse to be the active fuse. Returns 0 if none.
    */
    DSS_CAPI_DLL int32_t Fuses_Get_First(void);
    /*
    Get the name of the active Fuse element
    */
    DSS_CAPI_DLL char* Fuses_Get_Name(void);
    /*
    Advance the active Fuse element pointer to the next fuse. Returns 0 if no more fuses.
    */
    DSS_CAPI_DLL int32_t Fuses_Get_Next(void);
    /*
    Set the active Fuse element by name.
    */
    DSS_CAPI_DLL void Fuses_Set_Name(char* Value);
    /*
    Full name of the circuit element to which the fuse is connected.
    */
    DSS_CAPI_DLL char* Fuses_Get_MonitoredObj(void);
    /*
    Terminal number to which the fuse is connected.
    */
    DSS_CAPI_DLL int32_t Fuses_Get_MonitoredTerm(void);
    /*
    Full name of the circuit element switch that the fuse controls. Defaults to the MonitoredObj.
    */
    DSS_CAPI_DLL char* Fuses_Get_SwitchedObj(void);
    /*
    Full name of the circuit element to which the fuse is connected.
    */
    DSS_CAPI_DLL void Fuses_Set_MonitoredObj(char* Value);
    /*
    Number of the terminal to which the fuse is connected
    */
    DSS_CAPI_DLL void Fuses_Set_MonitoredTerm(int32_t Value);
    /*
    Full name of the circuit element switch that the fuse controls. Defaults to MonitoredObj.
    */
    DSS_CAPI_DLL void Fuses_Set_SwitchedObj(char* Value);
    /*
    Number of the terminal containing the switch controlled by the fuse.
    */
    DSS_CAPI_DLL int32_t Fuses_Get_SwitchedTerm(void);
    /*
    Number of the terminal of the controlled element containing the switch controlled by the fuse.
    */
    DSS_CAPI_DLL void Fuses_Set_SwitchedTerm(int32_t Value);
    /*
    Name of the TCCcurve object that determines fuse blowing.
    */
    DSS_CAPI_DLL char* Fuses_Get_TCCcurve(void);
    /*
    Name of the TCCcurve object that determines fuse blowing.
    */
    DSS_CAPI_DLL void Fuses_Set_TCCcurve(char* Value);
    /*
    Multiplier or actual amps for the TCCcurve object. Defaults to 1.0.  Multipliy current values of TCC curve by this to get actual amps.
    */
    DSS_CAPI_DLL double Fuses_Get_RatedCurrent(void);
    /*
    Multiplier or actual fuse amps for the TCC curve. Defaults to 1.0. Has to correspond to the Current axis of TCCcurve object.
    */
    DSS_CAPI_DLL void Fuses_Set_RatedCurrent(double Value);
    /*
    A fixed delay time in seconds added to the fuse blowing time determined by the TCC curve. Default is 0.
    */
    DSS_CAPI_DLL double Fuses_Get_Delay(void);
    /*
    Manual opening of all phases of the fuse.
    */
    DSS_CAPI_DLL void Fuses_Open(void);
    /*
    Close all phases of the fuse.
    */
    DSS_CAPI_DLL void Fuses_Close(void);
    /*
    Fixed delay time in seconds added to the fuse blowing time to represent fuse clear or other delay.
    */
    DSS_CAPI_DLL void Fuses_Set_Delay(double Value);
    /*
    Current state of the fuses. TRUE if any fuse on any phase is blown. Else FALSE.
    */
    DSS_CAPI_DLL uint16_t Fuses_IsBlown(void);
    /*
    Get/set active fuse by index into the list of fuses. 1 based: 1..count
    */
    DSS_CAPI_DLL int32_t Fuses_Get_idx(void);
    /*
    Set Fuse active by index into the list of fuses. 1..count
    */
    DSS_CAPI_DLL void Fuses_Set_idx(int32_t Value);
    /*
    Reset fuse to normal state.
    */
    DSS_CAPI_DLL void Fuses_Reset(int32_t Value);
    
    /*
    Array of strings ('open' or 'closed') indicating the state of each phase of the fuse.
    */
    DSS_CAPI_DLL void Fuses_Get_State(char*** ResultPtr, int32_t* ResultCount);
    /*
    Array of strings ('open' or 'closed') indicating the state of each phase of the fuse.
    */
    DSS_CAPI_DLL void Fuses_Set_State(char** ValuePtr, int32_t ValueCount);
    /*
    Array of strings ('open' or 'closed') indicating the normal state of each phase of the fuse.
    */
    DSS_CAPI_DLL void Fuses_Get_NormalState(char*** ResultPtr, int32_t* ResultCount);
    /*
    Array of strings ('open' or 'closed') indicating the normal state of each phase of the fuse.
    */
    DSS_CAPI_DLL void Fuses_Set_NormalState(char** ValuePtr, int32_t ValueCount);
    /*
    Number of phases, this fuse.
    */
    DSS_CAPI_DLL int32_t Fuses_Get_NumPhases(void);